--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,8 +17,24 @@ const { title } = Astro.props
         <link href="https://fonts.bunny.net/css?family=noto-sans:400,700" rel="stylesheet" />
     </head>
     <body class="bg-stone-100 font-sans text-stone-950">
-        <div class="container mx-auto my-8 px-4">
-            <slot />
+        <nav
+            class="xs:text-lg mb-8 bg-stone-950 py-4 text-sm text-stone-100 text-white md:text-xl lg:text-2xl"
+        >
+            <div class="container mx-auto px-4">
+                <ul class="flex">
+                    <li><a href="/" class="hover:underline">O glyphs</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container mx-auto mb-8 px-4">
+            <div class="prose prose-lg prose-stone md:prose-xl lg:prose-2xl">
+                <header>
+                    <h1 style="margin-left: -2px;">{title}</h1>
+                </header>
+                <main>
+                    <slot />
+                </main>
+            </div>
         </div>
     </body>
 </html>
