--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props
         >
             <div class="container mx-auto px-4">
                 <ul class="flex">
-                    <li><a href="/" class="hover:underline">O glyphs</a></li>
+                    <li><a href="/" class="hover:underline">⭕ glyphs</a></li>
                 </ul>
             </div>
         </nav>
