--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,18 +11,18 @@ const { title } = Astro.props
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="icon" type="image/svg+xml" href="/ocko/favicon.svg" />
         <title>{title}</title>
         <link rel="preconnect" href="https://fonts.bunny.net" />
         <link href="https://fonts.bunny.net/css?family=noto-sans:400,700" rel="stylesheet" />
     </head>
     <body class="bg-stone-100 font-sans text-stone-950">
         <nav
-            class="xs:text-lg mb-8 bg-stone-950 py-4 text-sm text-stone-100 text-white md:text-xl lg:text-2xl"
+            class="mb-8 bg-stone-950 py-4 text-sm text-stone-100 xs:text-lg md:text-xl lg:text-2xl"
         >
             <div class="container mx-auto px-4">
                 <ul class="flex">
-                    <li><a href="/" class="hover:underline">⭕ glyphs</a></li>
+                    <li><a href="/ocko" class="hover:underline">⭕ glyphs</a></li>
                 </ul>
             </div>
         </nav>
